key-casl compile within KeY