@@ -1,5 +1,35 @@
+plugins {
+}
+
+configurations { antlr4 }
+
 dependencies {
+    antlr4 "org.antlr:antlr4:4.9.3"
+    api "org.antlr:antlr4-runtime:4.9.3"
 
     implementation 'org.antlr:antlr4-runtime:4.9.3'
     implementation 'org.antlr:ST4:4.3.1'
 }
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+
+sourceSets.main.java.srcDirs("$projectDir/build/generated-src/antlr4/main/")
+def antlr4Output = "$projectDir/build/generated-src/antlr4/main/de/uka/ilkd/key/casl/parser"
+task runAntlr4(type: JavaExec) {
+    //see incremental task api, prevents rerun if nothing has changed.
+    inputs.files "src/main/antlr4/KeYLexer.g4", "src/main/antlr4/KeYParser.g4"
+    outputs.dir antlr4Output
+    classpath = configurations.antlr4
+    main = "org.antlr.v4.Tool"
+    args = ["-visitor",
+            "-Xexact-output-dir", "-o", antlr4Output,
+            "-package", "de.uka.ilkd.key.casl.parser",
+            "src/main/antlr4/CASLLexer.g4", "src/main/antlr4/CASLParser.g4"]
+    doFirst {
+        file(antlr4Output).mkdirs()
+    }
+}
+compileJava.dependsOn runAntlr4
